Closed Bug 851495 Opened 11 years ago Closed 11 years ago

text shaping with AAT Khmer fonts broken in Firefox 19

Categories

(Core :: Graphics: Text, defect)

x86
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla22
Tracking Status
firefox19 --- affected
firefox20 --- verified
firefox21 --- verified

People

(Reporter: jfkthame, Assigned: jfkthame)

References

Details

(Keywords: regression)

Attachments

(3 files)

Similar to the Myanmar issue in bug 846617 - because Khmer is missing from the "complex shaping" table in gfxMacPlatformFontList, we fail to send AAT Khmer fonts via Core Text in preference to HarfBuzz.

Adding the Khmer range to the sComplexScripts table fixes rendering for the "Khmer Sangam MN" font shipped with OS X 10.7, at least. (It does not fully fix rendering for "Khmer MN", but that appears to be a problem in either Core Text or the font itself.)
Attachment #725365 - Flags: review?(jdaggett)
Attachment #725365 - Flags: review?(jdaggett) → review+
https://hg.mozilla.org/mozilla-central/rev/aed82bbaefa4
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Comment on attachment 725365 [details] [diff] [review]
patch, add Khmer to table of scripts requiring shaping support

This is the Khmer equivalent of the Myanmar bug 846617 - it only affects OS X users of one specific script, so it impacts on a small user community but for them it's a bad regression; the patch is trivial and safe, so I think we should uplift for the sake of the affected community.

[Approval Request Comment]
Bug caused by (feature/regressing bug #): 797402

User impact if declined: Khmer script text will not display correctly when using the default OS X Khmer fonts.

Testing completed (on m-c, etc.): Confirmed to fix the issue in local build and in current m-c Nightly.

Risk to taking this patch (and alternatives if risky): Minimal risk: simple change in Mac-only code that affects -only- the Khmer Unicode codepoints. The alternative of reverting bug 797402 would adversely affect a much larger number of Indic OpenType fonts, for which harfbuzz shaping is better than Core Text.

String or UUID changes made by this patch: None
Attachment #725365 - Flags: approval-mozilla-beta?
Attachment #725365 - Flags: approval-mozilla-aurora?
Comment on attachment 725365 [details] [diff] [review]
patch, add Khmer to table of scripts requiring shaping support

low risk fix which helps with support of Khmer fonts via Core Text shaping impacting a small user group .

Also adding verifyme for help withqa verification once this lands.(should be similar to verifying Bug 846617 )
Attachment #725365 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Keywords: qawanted, verifyme
Ioana, can you please have someone on your team verify this fixed with Firefox Nightly 22.0a1 on OSX 10.7? Thanks.
QA Contact: ioana.budnar
QA Contact: ioana.budnar → virgil.dicu
Verified the issue by comparing some sites using Khmer fonts on Firefox 19.0 (20130123083802)
and then in 2013-03-18 Nightly (20130318030947).

URLs: 
http://www.google.com.kh/
http://www.virtualvinodh.com/khmer

See attachment for comparison - on the left side of the screen behavior on Firefox 19.0 and on the right behavior on Latest Nightly.
Thanks Virgil. Based on the comparison I *think* this is fixed, but I need someone familiar with the language/font to confirm the accuracy of these renderings.
Jonathan, can you please confirm Virgil's attached screenshot is what is expected?
Keywords: qawanted
(In reply to Anthony Hughes, Mozilla QA (:ashughes) from comment #8)
> Thanks Virgil. Based on the comparison I *think* this is fixed, but I need
> someone familiar with the language/font to confirm the accuracy of these
> renderings.

The screenshot of virtualvinodh.com shows fairly "broken" rendering in both cases, because it's falling back to the Khmer MN font, which does not work very well even with Core Text (see comment #0). You'll get a clearer comparison if you *disable* the Khmer MN font in Font Book.app, so that the only available Khmer font on the system is Khmer Sangam MN.
Virgil, please retest as Jonathan describes in comment 11, thanks.
Comment on attachment 725365 [details] [diff] [review]
patch, add Khmer to table of scripts requiring shaping support

Given the small group affected by this fix and subsequent risk we'll take this in tomorrow's beta.  Please uplift asap so it's landed in time for go to build.
Attachment #725365 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
(In reply to Anthony Hughes, Mozilla QA (:ashughes) from comment #12)
> Virgil, please retest as Jonathan describes in comment 11, thanks.

I disabled *Khmer MN* from Font Book.app and I opened http://www.virtualvinodh.com/khmer in Firefox 19.0 and Latest Nightly. 

It seems like there is a significant difference to me. See screenshot for details.
Yes, that looks exactly as expected: the FF19 rendering is badly broken, while the latest nightly version is correct.
Thanks Jonathan and Virgil.

Virgil, can you retest this with the latest Aurora and 20.0b6?
Verified the fix in Latest Aurora (20130320042012) and Firefox 20.0 Beta 6 (20130320062118)

Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:21.0) Gecko/20130320 Firefox/21.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:20.0) Gecko/20100101 Firefox/20.0

Khmer fonts look as expected with Khmer MN disabled from Font Book.app.
Marking Verified as per Nightly verification in comment 6 and Aurora in comment 19.
Status: RESOLVED → VERIFIED
Since we are a week away from our last Firefox 20 Beta should we just wontfix this for Firefox 19?
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: