bug 851495 - add Khmer to table of scripts requiring shaping support. r=jdaggett